<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.gulci.android.essentialapp.RouxActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:background="@drawable/image_10101"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_details"
        android:id="@+id/btnGotoDetails"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="btnOnClickGotoDetailsHandler"
        style="@style/ButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_course"
        android:id="@+id/btnGotoCourse"
        android:layout_above="@+id/btnGotoDetails"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="btnOnClickGotoCourseHandler"
        style="@style/ButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_website"
        android:id="@+id/btnGotoWebsite"
        android:layout_above="@+id/btnGotoCourse"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="btnOnClickGotoWebsiteHandler"
        style="@style/ButtonStyle"/>
</RelativeLayout>
